# mesa

./: android-aarch64  android-aarch64-fake  android-x86_64  fake-pkgconfig  meson.build  meson_options.txt
.github/workflows/: arm64.yml  build.yml  main.yml  x86_64.yml  x86_64.yml.wip
include/: drm.h  drm_mode.h  libdrm_macros.h  xf86drm.h
src/: meson.build
src/android_stub/: meson.build
src/egl/: meson.build
src/egl/drivers/dri2/: util_math.h  xf86drm.c
src/egl/main/: eglcurrent.h
src/gallium/: meson.build
src/gallium/drivers/zink/: meson.build
src/gallium/frontends/dri/: meson.build
src/gallium/frontends/glx/xlib/: meson.build
src/gallium/targets/dri/: meson.build
src/gallium/targets/libgl-xlib/: meson.build  xlib.c
src/glx/: meson.build
